# diosproc

./: CMakeLists.txt  README.md  buf.gen.yaml  device-sm.proto  device_client.cc  go.mod  go.sum  main.go  srvconf.json  tools.go
cdevice/: DeviceManager.h  libDiosProc.def  libDiosProc.exp  libDiosProc.lib
cmd/standalone/: main.go
gateway/: gateway.go
middleware/: middleware.go
proto/: buf.yaml
proto/device/v3/: device-c.proto  device.pb.go  device.pb.gw.go  device.proto  device_grpc.pb.go
proto/google/api/: annotations.pb.go  http.pb.go  httpbody.pb.go
proto/google/type/: datetime.pb.go
proto/pet/v1/: pet.pb.go  pet_grpc.pb.go
proto/protoc-gen-openapiv2/options/: annotations.pb.go  openapiv2.pb.go
server/: main.go  server.go
